<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:calendar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--没用-->
    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_f4_bg_white"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="8dp"
        android:paddingRight="20dp"
        android:paddingBottom="8dp"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/go_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp">

            <TextView
                android:id="@+id/go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/select_go_time"
                android:textColor="@color/white"
                android:textColorHint="@color/color_b2b2b2"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/go_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:src="@drawable/icon_calendar_delete"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/back_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp">

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/select_back_time"
                android:textColor="@color/white"
                android:textColorHint="@color/color_b2b2b2"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/back_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:src="@drawable/icon_calendar_delete"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <!--顶部周几名称栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="17dp"
        android:paddingBottom="9dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/week_day_01"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/week_day_02"
            android:textColor="@color/black"
            android:textSize="13dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/week_day_03"
            android:textColor="@color/black"
            android:textSize="13dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/week_day_04"
            android:textColor="@color/black"
            android:textSize="13dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/week_day_05"
            android:textColor="@color/black"
            android:textSize="13dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/week_day_06"
            android:textColor="@color/black"
            android:textSize="13dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/week_day_07"
            android:textColor="@color/black"
            android:textSize="13dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#EEEEEE" />

    <!--日历选择页-->
    <com.capsane.mycalander.DayPickerView
        android:id="@+id/day_picker"
        calendar:selectableDaysDuration="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        calendar:colorDayName="#FF00FF"
        calendar:colorMonthName="#222222"
        calendar:colorNormalDay="#000000"
        calendar:lastMonth="january"
        calendar:colorPreviousDay="#BBBBBB"
        calendar:colorSelectedDayBackground="#FFD552"
        calendar:currentDaySelected="false"
        calendar:drawRoundRect="false"
        calendar:enablePreviousDay="false"
        calendar:selectSingle="true"
        calendar:selectedDayRadius="14dp"
        calendar:showMonthDay="false"
        calendar:textSizeDay="13dp"
        calendar:textSizeDayName="15dp"
        calendar:textSizeMonth="17dp" />


</LinearLayout>